29. If background gradient has a 'shine', then when used for backgrounds draw a
    radial gradient top centered.
30. Always use windows-style scrollbars for OpenOffice.org - it seems to assume this
    button layout anyway, regardless of what is painted on screen.
31. In kwin decoration, allow to use outer border when border size set to none/no sides.

1.5.2
-----
 1. Apply opacity settings to inactive tabs.
 2. Add config option of apps that should not use menu opacity.
 3. Fix 'white line' appearing at the bottom of kwin titlebars when not using
    an outer border.
 4. If drawing an inner frame for kwin decorations, draw after titlebar has been
    drawn.
 5. Fix blurry arrows in Amarok's collection browser.
 6. qmake updates - thanks to Hugues Delorme.
 7. Dont call killTimer if timer was never registered - fixes Qt warning on app
    closure under windows. Thanks to Hugues Delorme.
 8. When setting KDE SC4.5 blur-behind hint, only set rects that can actually be
    blurred - should speed things up. (Idea and code stolen from Bespin)
 9. Fix non-styled background of scroll areas with no frame - such as in plasma's
    configure desktop mouse actions page.
10. Don't force alternate listview colours for KDM - looks bad!
11. Add option to use same gradients for inactive kwin shadows as those used for
    active windows.
12. Draw stripes into kwin border, if colouring the titlebar only.

1.5.1
-----
 1. Always use active palette to draw progressbar gradient.
 2. Fix style-support enabled builds
 3. Fix etched combos and spinbuttons when using round widgets, but square entry
    fields.
 4. Fix etch of non-unified combos.
 5. Fix config module compilation when kwin headers are not installed.
 6. Dont draw thumbs on circular sliders - they dont look good!
 7. Fix black bottom corners on fully rounded windows when not using compositing.
 8. Dont apply background opacity setting to; plasma (seems to cause an icon for