@@ -38,6 +38,8 @@
 30. Always use windows-style scrollbars for OpenOffice.org - it seems to assume this
     button layout anyway, regardless of what is painted on screen.
 31. In kwin decoration, allow to use outer border when border size set to none/no sides.
+32. In kwin decoration, if disable compositing and not drawing outer border and colouring
+    only the titlebar - then add outer border until compositing is re-enabled.
 
 1.5.2
 -----
